--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -1,10 +1,13 @@
-= form_with(model: article) do |form|
-  - if article.errors.any?
-    div style="color: red"
-      h2 = "#{pluralize(article.errors.count, "error")} prohibited this article from being saved:"
-      ul
-        - article.errors.each do |error|
-          li = error.full_message
+= form_for @article do |f|
+  - if @article.errors.any?
+    #error_explanation
+    h2 = "#{pluralize(@article.errors.count, "error")} prohibited this article from being saved:"
+    ul
+      - @article.errors.full_messages.each do |message|
+        li = message
 
-  div
-    = form.submit
+  .field
+    .control
+      = f.text_field :url, :required => true, :class => "input"
+
+  .actions = f.submit :class => "button is-primary"
